Added commands and decorative changes

--- a/src/main/resources/Config.yml
+++ b/src/main/resources/Config.yml
@@ -21,12 +21,19 @@ min-y: 50
 
 # Сообщение при появлении
 start-message:
-  - "[Маршруточный груз] Внимание! Событие Маршруточный груз началось!"
-  - "Он появился на координатах: x: %x%, y: %y%, z: %z%"
+  - "&6[Маршруточный груз] &7Внимание! Событие Маршруточный груз началось!"
+  - "&7Он появился на координатах: &ex: %x%, y: %y%, z: %z%"
 
 # Сообщение при окончании
 end-message:
-  - "[Маршруточный груз] Внимание! Событие Маршруточный груз закончилось!"
+  - "&6[Маршруточный груз] &7Внимание! Событие Маршруточный груз закончилось!"
+
+# Сообщение при проверке ивента (status)
+status-message-go:
+  - "&7Маршруточный груз находится на координатах &ex: %x%, y: %y% z: %z%"
+
+status-message-none:
+  - "&6Активного события не обнаруженно"
 
 # Разные типы грузов
 cargo-types:
