Fix minecart spawn bugs and added reload command

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -29,10 +29,10 @@ end-message:
   - "&6[Маршруточный груз] &7Внимание! Событие Маршруточный груз закончилось!"
 
 # Сообщение при проверке ивента (status)
-status-message-go:
+status-go-message:
   - "&7Маршруточный груз находится на координатах &ex: %x%, y: %y% z: %z%"
 
-status-message-none:
+status-none-message:
   - "&6Активного события не обнаруженно"
 
 # Разные типы грузов
